--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@ role-tables:
 
 <div class="jumbotron">
     <p>
-        The <b>Awesome Research Group</b> at <b>Example U</b> does all sorts of
-        research. Here is a place where we tell you exactly what that is!
+        The <b>Memory and Storage System Research Group</b> at <b>The Chinese University of Hong Kong</b> is led by <a href=""><b>Prof. Ming-Chang Yang</b></a>.
     </p>
 </div>
 
