--- a/code.html
+++ b/code.html
@@ -5,7 +5,7 @@
    content="0; url=https://github.com/cuhk-mass">
 </head>
 <body>
-   <p>The page has moved to:
+   <p>Redirecting to the MASS@CUHHK Github:
    <a href="https://github.com/cuhk-mass">this page</a></p>
 </body>
 </html>
