--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ role-tables:
 
 <div class="jumbotron">
     <p>
-        The <b>Memory and Storage System Research Group</b> at <b>The Chinese University of Hong Kong</b> is led by <a href=""><b>Prof. Ming-Chang Yang</b></a>.
+        <b>Memory and Storage System Research Group</b> at <b>The Chinese University of Hong Kong</b> is led by <a href="http://www.cse.cuhk.edu.hk/~mcyang/"><b>Prof. Ming-Chang Yang</b></a>. 
+        Our primary research interests include emerging non-volatile memory and storage technologies, memory and storage systems, and the next-generation memory/storage architecture designs.
     </p>
 </div>
 
