--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ role-tables:
     <p>
         <b>Memory and Storage System Research Group</b> at <b>The Chinese University of Hong Kong</b> is led by <a href="http://www.cse.cuhk.edu.hk/~mcyang/"><b>Prof. Ming-Chang Yang</b></a>. 
         Our primary research interests include emerging non-volatile memory and storage technologies, memory and storage systems, and the next-generation memory/storage architecture designs.
+        <b style="color:red;">I am now recruiting self-motivated graduate students, research assistants, and postdoctoral researchers with special interests in <u>memory and storage system</u> designs!</b>
     </p>
 </div>
 
