--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ role-tables:
         Our primary research interests include emerging non-volatile memory and storage technologies, memory and storage systems, and the next-generation memory/storage architecture designs.
     </p>
     <p>
-        <b style="color:red;">I am now recruiting self-motivated graduate students, research assistants, and postdoctoral researchers with special interests in <u>memory and storage system</u> designs!</b>
+        <b style="color:red;">We are looking for self-motivated graduate students, research assistants, and postdoctoral researchers with special interests in <u>memory and storage system</u> designs!</b>
     </p>
 </div>
 
