--- a/people.html
+++ b/people.html
@@ -7,7 +7,8 @@ picture-role-groups:
 - {roles: [grad], width: 8}
 
 no-picture-role-groups:
-- {roles: [alum], width: 12}
+- {roles: [ra], width: 4}
+- {roles: [alum], width: 8}
 ---
 
 <section class="people row justify-content-between">
